# databricks-engineer-associate

./: .gitmodules  Readme.md  pyproject.toml
day1/: notes.md  notes_day1.md
day2/: notes_day2.md
practice_exams/: test_1.html  test_1_no_solutions.html  test_2.html  test_2_no_solutions.html  test_3.html  test_3_no_solutions.html  test_4.html  test_4_no_solutions.html  test_5.html  test_5_no_solutions.html
