[tool.poetry]
name = "databricks-training"
version = "0.1.0"
description = ""
authors = ["Enrico Mosca <enrico.mosca@atos.net>"]
readme = "README.md"
packages = [{include = "databricks_training"}]

[tool.poetry.dependencies]
python = "^3.8"
ipykernel = "^6.20.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
